Commit before making new branch

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     and an https call to the Google Maps API for the directions and map on the page-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Your business description here">
+    <meta name="description" content="Daaaaad!!!">
     <title>Davenport's Best Tuktuk Rides</title>
     <link rel="stylesheet" href="main.css">
     <script src="map.js"></script>
