First commit with new page for drivers

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <nav>
             <!--The main logo for the website  (tbd)-->
-            <div class="logo">
+            <div class="heading">
                 <a> TukTuk Taxi </a>
             </div>
         </nav>
@@ -97,6 +97,8 @@
                 jasonadkins@gmail.com
             </p>
         </div>
+
+        <a href="driver.html">For Drivers</a>
     </section>
 
 
