--- a/driver.html
+++ b/driver.html
@@ -3,7 +3,7 @@
 <head>
     <!-- Sets basic background info for the website, starting with what characters, how it will be viewed, 
     our basic description (tbd), title, what file to use for styling, what file to use for functionality,
-    and an https call to the Google Maps API for the directions and map on the page-->
+    and an https call to the Google Maps API for the directions and map on the page -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Page viewed by the drivers to pick up rides">
@@ -18,6 +18,7 @@
 
 <body>
     <header>
+        <!-- Just a heading to get started on the page -->
         <div class="heading">
             <a>Hello, drivers!</a>
         </div>
