Attempting to generate route for both user and driver.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <br><br>
     
             <!-- Runs getDirect function from map.js to show info in the output div -->
-            <button onclick="getDirect()">Order</button>
+            <button onclick="getCustDirect()">Order</button>
         </div>
 
         <!-- Where order details will be printed -->
