--- a/driver.html
+++ b/driver.html
@@ -34,6 +34,10 @@
         
             <br><br><br><br>
 
+            <!-- Holds output to test values from the drivers page and functions-->
+            <div id="driverOutput"></div>
+
+
             <!-- To have input box for start point-->
             <input id="driver" type="text" placeholder="Current Location">
 
