Rearranging and preparing to design the pages visually

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <!-- To order the ride for right now -->
             <button id="now">ASAP</button>
 
-            <br>
+            or
     
             <!-- To schedule the ride ahead of time that day -->
             <select id="hour">
@@ -62,7 +62,7 @@
                 <option value="21:00">9</option>
             </select>
             :
-            <select id="quarter hour">
+            <select id="quarter">
                 <option value="0">00</option>
                 <option value="15">15</option>
                 <option value="30">30</option>
